feat(rbac): Implemented role based actions on api endpoints.
